--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,7 +13,7 @@ dependencies:
   flutter_bloc: ^8.1.6
   intl: ^0.19.0
   get_it: ^7.6.0
-
+  flutter_sticky_header: ^0.8.0
   oda_data_tmf667_document_management:
     git:
       url: https://github.com/corp-ais/next-myais2-oda-data-tmf667-document-management.git
@@ -38,7 +38,10 @@ dependencies:
     git:
       url: https://github.com/corp-ais/next-core.git
       ref: staging
-
+  core:
+    git:
+      url: https://github.com/corp-ais/next-myais2-core.git
+      ref: staging
 
 
 dev_dependencies:
