--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,11 +14,67 @@ dependencies:
   intl: ^0.19.0
   get_it: ^7.6.0
   flutter_sticky_header: ^0.8.0
+  dartx: ^1.2.0
   oda_data_tmf667_document_management:
     git:
       url: https://github.com/corp-ais/next-myais2-oda-data-tmf667-document-management.git
-      ref: staging  
-  
+      ref: develop
+
+  oda_presentation_universal:
+    git:
+      url: https://github.com/corp-ais/next-myais2-oda-presentation-universal.git
+      ref: develop
+
+  oda_fe_framework:
+    git:
+      url: https://github.com/corp-ais/next-oda-fe-framework
+      ref: staging
+
+  mya_ui_design:
+    git:
+      url: https://github.com/corp-ais/next-myais2-oda-myais-ui-design.git
+      ref: staging
+
+  oda_data_schema:
+    git:
+      url: https://github.com/corp-ais/next-myais2-oda-data-schema.git
+      ref: feature/v245_enrich_next_core
+
+  next_core:
+    git:
+      url: https://github.com/corp-ais/next-core.git
+      ref: develop
+  core:
+    git:
+      url: https://github.com/corp-ais/next-myais2-core.git
+      ref: staging
+
+dev_dependencies:
+  flutter_test:
+    sdk: flutter
+  flutter_lints: ^4.0.0
+
+dependency_overrides:
+  flutter_bloc: ^9.0.0
+  intl: ^0.20.2
+  resumable_upload: ^0.0.2
+  http: ^1.0.0
+  web: ^0.5.1
+  firebase_core: ^3.4.1
+  realm: ^20.1.1
+  bloc_test: ^10.0.0
+  permission_handler: ^10.4.3
+  dio: ^4.0.6
+  oda_data_tmf667_document_management:
+    git:
+      url: https://github.com/corp-ais/next-myais2-oda-data-tmf667-document-management.git
+      ref: staging
+
+  oda_presentation_universal:
+    git:
+      url: https://github.com/corp-ais/next-myais2-oda-presentation-universal.git
+      ref: staging
+
   oda_fe_framework:
     git:
       url: https://github.com/corp-ais/next-oda-fe-framework
@@ -41,41 +97,7 @@ dependencies:
   core:
     git:
       url: https://github.com/corp-ais/next-myais2-core.git
-      ref: staging
-
-
-dev_dependencies:
-  flutter_test:
-    sdk: flutter
-  flutter_lints: ^4.0.0
-
-dependency_overrides:
-  flutter_bloc: ^9.0.0
-  intl: ^0.20.2
-  resumable_upload: ^0.0.2
-  http: ^1.0.0
-  web: ^0.5.1
-  firebase_core: ^3.4.1
-  realm: ^20.1.1
-  oda_fe_framework:
-    git:
-      url: https://github.com/corp-ais/next-oda-fe-framework
-      ref: staging
-
-  mya_ui_design:
-    git:
-      url: https://github.com/corp-ais/next-myais2-oda-myais-ui-design.git
-      ref: staging
-
-  oda_data_schema:
-    git:
-      url: https://github.com/corp-ais/next-myais2-oda-data-schema.git
-      ref: feature/v245_enrich_next_core
-
-  next_core:
-    git:
-      url: https://github.com/corp-ais/next-core.git
-      ref: staging
+      ref: staging       
 
 flutter:
 
